--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EndActivity"></activity>
+        <activity android:name=".HighscoreActivity"></activity>
+        <activity android:name=".EndActivity" />
         <activity android:name=".GameActivity" />
         <activity android:name=".LevelActivity" />
         <activity android:name=".MainActivity">
